--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -560,4 +560,42 @@ deactivate A
 
 #+RESULTS:
 [[file:diags/plantuml/seq-diag/examples/all-together.png]]
+**** Mine (to generate report)                           :noexport:Important:
 
+#+BEGIN_SRC plantuml :file diags/plantuml/seq-diag/output/interaction-mode.png
+@startuml
+' ---------- SETUP ----------------
+' strict uml style and hide footboxes
+skinparam style strictuml
+hide footbox
+' for anchors and duration this may be required (uncomment)
+' !pragma teoz true
+
+' ---------- Declaring participants
+' participant Participant as Foo
+actor User
+boundary "Gesture Recognition Engine" as GRE
+control "UI Engine" as UIE
+actor "Local System" as LS
+' entity      Entity      as Foo4
+' database    Database    as Foo5
+' collections Collections as Foo6
+' queue       Queue       as Foo7
+' Foo -> Foo1 : To actor 
+' Foo -> Foo2 : To boundary
+' Foo -> Foo3 : To control
+' Foo -> Foo4 : To entity
+' Foo -> Foo5 : To database
+' Foo -> Foo6 : To collections
+' Foo -> Foo7: To queue
+
+' async message
+User ->> LS: User in range
+activate LS
+LS -> LS: activate camera
+
+@enduml
+#+END_SRC
+
+#+RESULTS:
+[[file:diags/plantuml/seq-diag/output/interaction-mode.png]]
