--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -562,6 +562,7 @@ deactivate A
 [[file:diags/plantuml/seq-diag/examples/all-together.png]]
 **** Mine (to generate report)                           :noexport:Important:
 
+*Interaction mode*
 #+BEGIN_SRC plantuml :file diags/plantuml/seq-diag/output/seq-local-interaction-mode.png
   @startuml
   ' ---------- SETUP ----------------
@@ -639,3 +640,146 @@ deactivate A
 
 #+RESULTS:
 [[file:diags/plantuml/seq-diag/output/seq-local-interaction-mode.png]]
+
+*Remote client*
+#+BEGIN_SRC plantuml :file diags/plantuml/seq-diag/output/seq-rc.png
+  @startuml
+  ' ---------- SETUP ----------------
+  ' strict uml style and hide footboxes
+  skinparam style strictuml
+  hide footbox
+  ' for anchors and duration this may be required (uncomment)
+  ' !pragma teoz true
+
+  ' ---------- Declaring participants
+  ' participant Participant as Foo
+  
+  actor User
+  box "MDO-RC" #LightBlue
+  boundary "UI" as UI
+  control "UI Engine" as UIE
+  actor "Remote Client \nBack-End" as RC
+  endbox
+  box "MDO-RS" #f9db8f
+  actor "Remote Server" as RS
+  database "User DB" as UserDB
+  endbox
+  ' entity      Entity      as Foo4
+  ' database    Database    as Foo5
+  ' collections Collections as Foo6
+  ' queue       Queue       as Foo7
+
+  ' async message
+  == Application start ==
+  activate User
+  User ->> UI: starts app 
+  deactivate User
+  activate UI
+  UI -> User: Show Login view
+  deactivate UI
+  activate User
+''
+  == Login ==
+  activate User
+  User ->> UI: input username and password
+  UI -> User: visual feedback
+  User ->> UI: User presses Login
+''
+  deactivate User
+  activate UI
+  UI -> UIE: login_btn_pressed
+  deactivate UI
+  activate UIE
+  UIE -> RC : login(username, pass)
+  deactivate UIE
+  activate RC
+  RC -> RC : Encrypt password
+  RC ->> RS : send(username, pass_crypt)
+  RS -> UserDB : transaction(username, pass_crypt)
+'' DB transaction
+  alt transaction success
+    UserDB -> RS: User info
+    RS ->> RC: User info
+    RC -> RC: check type of User
+    alt Admin user
+    RC -> UIE: admin user
+    UIE -> UI: admin_view
+    UI -> User: Show admin view
+    ref over RC, UIE, UI, User: Admin
+    else Brand user
+    RC -> UIE: brand user
+    UIE -> UI: brand_view
+    UI -> User: Show brand view
+    ref over RC, UIE, UI, User: Brand
+    end
+  else failure
+  UserDB -> RS: empty
+  end
+''
+''  == User Authentication ==
+''  alt Admin
+''    UIE ->> RC : Send DBs relative to admin
+''    RC ->> User : Show Main Menu
+''    alt Users
+''      User ->> RC : Manage Useres
+''      RC ->> UIE : Send changes
+''      UIE ->> UIE : Update data
+''    else Statistics
+''      User ->> RC : Watch Statistics
+''      RC ->> User : Show Statistics
+''    else Ads To Activate
+''      User ->> RC : Download Videos, Accept/Deny Ads
+''      RC ->> UIE : Send Changes
+''      UIE ->> UIE : Update data
+''    else Logout
+''      User ->> RC : Logout
+''      RC ->> RC : Quit
+''    end
+'    
+''  else Brand
+''    UIE ->> RC : Sends DBs relative to the brand 
+''    RC ->> User : Show Main Menu
+''    alt Notifications
+''      User ->> RC : See notifications
+''      RC ->> User : Show notifications
+''    else Rented
+''      User ->> RC : See Rented Ads
+''      RC ->> User : Show statistics of Rented Ads
+''    else To Rent
+''      User ->> RC : Upload Videos, choose conditions and fragrancy
+''      RC ->> UIE : Send Changes
+''      UIE ->> UIE : Update data
+''    else Logoudat
+''      User ->> RC : Logout
+''      RC ->> RC : Quit
+''    end
+''  end
+
+' =========================== ZE das couves ==============================='
+'  LS -> UIE: show Image Filter view
+'  UIE -> User: visual feedback
+'  ref over User, GRE, UIE, LS: Image Filter
+' -------
+'    else Take Pic
+'    LS -> UIE: show Pic view
+'    UIE -> User: visual feedback
+'    ref over User, GRE, UIE, LS: Picture mode
+' -------
+'    else Create GIF
+'    LS -> UIE: show GIF view
+'    UIE -> User: visual feedback
+'    ref over User, GRE, UIE, LS: GIF mode
+'    '' LS -> LS: process gesture \ncallback
+'    '' LS -> UIE: provide output
+'    '' UIE -> User: visual feedback
+'    ' end alt
+'    end 
+' end par
+'  end
+		
+
+  @enduml
+#+END_SRC
+
+#+RESULTS:
+[[file:diags/plantuml/seq-diag/output/seq-rc.png]]
