ADD: budget estimation

--- a/Proj/report/sty/dissertation-xelatex.sty
+++ b/Proj/report/sty/dissertation-xelatex.sty
@@ -9,7 +9,7 @@
 %\usepackage{marginnote}
 % Color setup
 %\usepackage{color}
-\usepackage[dvipsnames,rgb,table]{xcolor}
+\usepackage[dvipsnames,rgb,table, xcdraw]{xcolor}
 %\usepackage[utf8x]{inputenc}
 %\usepackage[linedheaders,parts,pdfspacing]
 \usepackage{amsmath,systeme}
