FIX: Report title

--- a/Proj/report/sty/dissertation-xelatex.sty
+++ b/Proj/report/sty/dissertation-xelatex.sty
@@ -604,7 +604,7 @@ align=left, leftmargin=*} %,label=$\star$
 %\\\withboldnewsgott{\Large\@titleB}
 \\\withboldnewsgott{\Huge{Marketing Digital Outdoor}}
 \\\withboldnewsgott{\Huge{with gesture interaction ---}}
-\\\withboldnewsgott{\Huge{Problem statement}}
+\\\withboldnewsgott{\Huge{Analysis}}
 \\\rule{0pt}{1.5cm}
 %\\\withboldnewsgott{\hspace{2cm}\large{Group 7}}
 \\\rule{0pt}{0.1cm}
